--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/lmachens/api-template#readme",
   "dependencies": {
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^4.1.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
